# TAIC-report-summary

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  PDFDownloader.py  PDFParser.py  Procfile  README.md  TextSummarizer.py  config.yaml  docker-compose.yml  main.py  pip install.txt  pyproject.toml  recommendations.pkl  requirements.txt
.github/: deploy_viewer.yaml
.github/ISSUE_TEMPLATE/: bug---problem.md  feature.md
.github/workflows/: ci.yml  deploy_viewer.yaml  engine.yml  main_taic-document-searcher.yml  ruff_lint.yml
Project documents/: README.md
Project documents/TAIC/state_of_project_02_July_2024/: presentation.htm  presentation.md
Project documents/TAIC/state_of_project_7_May_2024/: presentation.htm  presentation.md  state_and_future_7_May_2024.md
Uni project documents/Final Report/: 159333_Final_report.bib  21011195_159333_Final_Report.md
Uni project documents/mid term report/: midterm.md
data/: atsb_historic_aviation_investigations.csv  cleaned_TAIC_recommendations_2024_04_04.csv  cleaned_TAIC_recommendations_2024_11_19.csv  event_types.csv  readme.md
engine/: Modes.py  OpenAICaller.py  cli.py
engine/Extract_Analyze/: APICostEstimator.py  OutputFolderReader.py  RecommendationResponseClassification.py  RecommendationSafetyIssueLinking.py  ReferenceChecking.py  ReportExtracting.py  Summarizer.py  ThemeGenerator.py  Themes.py
engine/Gather_Wrangle/: PDFDownloader.py  PDFParser.py
engine/Verify/: Comparer.py  ThemeComparer.py  WeightingComparer.py
engine/analyze/: Embedding.py  RecommendationResponseClassification.py  RecommendationSafetyIssueLinking.py
engine/extract/: ReferenceChecking.py  ReportExtracting.py  ReportTypeAssignment.py  ThemeGenerator.py  Themes.py
engine/gather/: DataDownloading.py  DataGetting.py  PDFDownloader.py  PDFParser.py  RecommendationSplitting.py  WebsiteScraping.py
engine/utils/: AICaller.py  AzureStorage.py  Config.py  EngineOutputStorage.py  Modes.py  OpenAICaller.py  OutputFolderReader.py  cli.py
example_report/: example_report.Rmd
example_report/Breadth/: example_report.Rmd
notebooks/: readme.md
notebooks/adding_multiple_document_types/: multiple_document_types.ipynb
notebooks/admin_notebooks/: analyze_lost_reports.ipynb  viewer_logs.ipynb
notebooks/automatic_running_of_engine/: auto_engine_execution.ipynb
notebooks/creating_test_data/: creating_test_data.ipynb
notebooks/deploy_engine_output/: deploying_output.ipynb
notebooks/recommendation_extraction/: #269.ipynb
notebooks/recommendation_responses_categorization/: .gitignore  2022-06-30.SR.Report.to.Minister.docx  2023-06-30.SR.Report.to.Minister.docx  categoriesing_recommendations.ipynb  example_recommendation_categories_ingrid_responses.xlsx
notebooks/recommendation_safety_issue_linking/: .gitignore  TAIC_recommendations_04_04_2024.xlsx  recommendation_SI_linking.ipynb
notebooks/report_event_type_extraction/: report_event_type_extaction..ipynb
notebooks/safety themes_from_safety_issues/: .gitignore  BERTopic_safety_theme_generation.ipynb  safety_themes_from_safety_issues.ipynb
notebooks/safety themes_from_safety_issues/demo_group_model/: topics.json
notebooks/safety themes_from_safety_issues/demo_individual_model_mode_0/: topics.json
notebooks/safety themes_from_safety_issues/demo_individual_model_mode_1/: topics.json
notebooks/safety themes_from_safety_issues/demo_individual_model_mode_2/: topics.json
notebooks/safety themes_from_safety_issues/demo_merged_model/: topics.json
notebooks/safety_issue_extraction/: #268.ipynb  .gitignore  manual_comparison.txt  safety_issue_extraction.ipynb
notebooks/text_extraction_from_all_agencies/: #257.ipynb  #265.ipynb  #266.ipynb  #267.ipynb  .gitignore
notebooks/vector database exploration/: #165_basic_safety_issue_rag.ipynb  .gitignore  evaluation_searches.yaml  search_evaluation.ipynb  vector_db_exploration.ipynb
notebooks/viewer_logs/: viewer_logs.ipynb
python/: ConfigReader.py  OpenAICaller.py  main.py
python/Extract_Analyze/: APICostEstimator.py  OutputFolderReader.py  ReportReader.py  Summarizer.py  TextSummarizer.py  ThemeGenerator.py  ThemeReader.py  Themes.py
python/Gather_Wrangle/: PDFDownloader.py  PDFParser.py
tests/: conftest.py  test_AICaller.py  test_AzureStorage.py  test_DataGetting.py  test_Embedding.py  test_EngineOutputStorage.py  test_PDFParser.py  test_RecommendationResponseClassification.py  test_RecommendationSafetyIssueLinking.py  test_ReportExtracting.py  test_ReportTypeAssignment.py  test_WeightingComparer.py  test_app.py  test_config.yaml  test_header_randomization.py  test_search.py  test_website_scrapping.py
tests/data/: event_types.pkl  extracted_reports.pkl  links_temp.pkl  recommendation_test_data.pkl  report_titles.pkl  response_classification_partly_classified.pkl
tests/data/output/: all_event_types.pkl  atsb_historic_aviation_investigations.pkl  atsb_safety_issues.pkl  atsb_website_reports_table.pkl  atsb_website_safety_issues.pkl  extracted_reports.pkl  parsed_reports.pkl  report_titles.pkl  taic_website_reports_table.pkl
validation/2013_203/: 2013_203_summary.txt  2013_203_themes.txt
validation/2015_203/: 2015_203_summary.txt  2015_203_themes.txt
validation/2017_201/: 2017_201_summary.txt  2017_201_themes.txt
validation/2018_206/: 2018_206_summary.txt  2018_206_themes.txt
validation/2021_203/: 2021_203_summary.txt  2021_203_themes.txt
validation/safety_issue_extraction/: safety_issue_extraction.ipynb
viewer/: ReportCreation.py  ResultsAnalysis.py  Search.py  Searching.py  app.py  app_config.py  run.py  search.py
viewer/output/: all_themes.txt  average_summary.txt  predefined_themes.yaml  recommendation_responses.csv  summarized_themes.txt  summary.csv  themes.yaml
viewer/output/2010_001/: 2010_001.txt  2010_001_important_text.yaml  2010_001_recommendation_safety_issue_links.csv  2010_001_recommendations.csv  2010_001_safety_issues.yaml  2010_001_summary.yaml  (+2 more)
viewer/templates/: auth_error.html  base.html  feedback_form.html  index.html  login.html  search_result_report.html
(+1324 files in other folders)
