[tool.poetry]
name = "taic-report-engine"
version = "0.1.0"
description = "An engine to use the powers of LLMs offered by openai to help analyse and interpret the accident investigation reports."
authors = ["James <1jamesthompson1@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "engine"}, {include = "viewer"}]
repository = "https://github.com/1jamesthompson1/TAIC-report-summary"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
pypdf = "^3.15.0"
requests = "^2.31.0"
tiktoken = "^0.5.2"
pyyaml = "^6.0.1"
argparse = "^1.4.0"
pandas = "^2.0.3"
regex = "^2023.8.8"
openai = "^1.4.0"
weasyprint = "^60.2"
matplotlib = "^3.8.3"
networkx = "^3.2.1"
voyageai = "^0.2.3"
tenacity = "^8.3.0"
transformers = "^4.41.2"

[tool.poetry.group.viewer.dependencies]
jinja2 = "^3.1.2"
flask = "^2.3.3"
regex = "^2023.8.8"
nltk = "^3.8.1"
tantivy = "^0.22.0"
lancedb = "^0.8.2"
lxml = "^5.2.2"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
torch = "^2.3.0"
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
notebook = "^7.1.2" 
openpyxl = "^3.1.2"
langchain = "^0.1.17"
langchain-community = "^0.0.36"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.6"
langchain-voyageai = "^0.1.0"
gensim = "^4.3.2"
scipy = "1.12"
lbl2vec = "^1.0.2"
ipywidgets = "^8.1.2"
python-docx = "^1.1.0"
ruff = "^0.4.9"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
engine = "engine.utils.cli:cli"
viewer = "viewer.app:run"

[tool.coverage.report]
include_namespace_packages = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
