[tool.poetry]
name = "taic-report-engine"
version = "0.1.0"
description = "An engine to use the powers of LLMs offered by openai to help analyse and interpret the accident investigation reports."
authors = ["James <1jamesthompson1@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "engine"}, {include = "viewer"}]
repository = "https://github.com/1jamesthompson1/TAIC-report-summary"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pypdf = "^3.15.0"
requests = "^2.31.0"
tiktoken = "^0.5.2"
pyyaml = "^6.0.1"
pandas = "^2.0.3"
regex = "^2023.8.8"
openai = "^1.4.0"
matplotlib = "^3.8.3"
networkx = "^3.2.1"
voyageai = "^0.2.3"
tenacity = "^8.3.0"
transformers = "^4.41.2"
anthropic = "^0.29.0"
numpy = "^1.26.0"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.4"
pytest-env = "^1.1.3"

[tool.poetry.group.viewer.dependencies]
jinja2 = "^3.1.2"
flask = "^2.3.3"
regex = "^2023.8.8"
nltk = "^3.8.1"
lxml = "^5.2.2"
plotly = "^5.22.0"
flask-session = "^0.8.0"
identity = "^0.9.0"
adlfs = "^2024.4.1"
azure-data-tables = "^12.5.0"
openpyxl = "^3.1.5"
werkzeug = "^3.0.3"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
torch = "^2.3.0"
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
notebook = "^7.1.2" 
openpyxl = "^3.1.2"
ipywidgets = "^8.1.2"
python-docx = "^1.1.0"
ruff = "^0.4.9"
pre-commit = "^3.7.1"
deptry = "^0.18.0"
sentence-transformers = "^3.0.1"

[tool.poetry.scripts]
engine = "engine.utils.cli:cli"
viewer = "viewer.app:run"

[tool.coverage.report]
include_namespace_packages = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "db_URI=./tests/data/vector_db",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
ignore = ["DEP004"]

[tool.ruff]
extend-exclude = ["*.ipynb"]