[project]
name = "taic-report-engine"
version = "0.1.0"
description = "An engine to use the powers of LLMs offered by openai to help analyse and interpret the accident investigation reports."
authors = [
    {name = "James", email = "1jamesthompson1@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["accident", "investigation", "reports", "llm", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pypdf>=5.1.0",
    "requests>=2.31.0",
    "tiktoken>=0.8.0",
    "pyyaml>=6.0.1",
    "pandas>=2.0.3",
    "regex>=2023.8.8",
    "openai>=1.4.0",
    "matplotlib>=3.8.3",
    "networkx>=3.2.1",
    "voyageai>=0.2.3",
    "tenacity>=8.3.0",
    "transformers>=4.41.2",
    "anthropic>=0.40.0",
    "numpy>=1.26.0",
    "beautifulsoup4>=4.12.3",
    "tqdm>=4.66.4",
    "pytest-env>=1.1.3",
    "hrequests>=0.8.2",
    "roman>=4.2",
    "lancedb>=0.24.1",
    "azure-ai-inference>=1.0.0b9",
    "pylance>=0.31.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "torch>=2.5.1",
    "pytest>=7.4.3",
    "pytest-xdist>=3.5.0",
    "notebook>=7.1.2",
    "openpyxl>=3.1.2",
    "ipywidgets>=8.1.2",
    "python-docx>=1.1.0",
    "ruff>=0.4.9",
    "pre-commit>=3.7.1",
    "deptry>=0.18.0",
    "sentence-transformers>=3.0.1",
    "plotnine>=0.13.6",
    "pylint>=3.3.1",
    "plotly>=5.24.1",
    "dash>=2.18.2",
    "gunicorn>=23.0.0",
]

[project.urls]
"Homepage" = "https://github.com/1jamesthompson1/TAIC-report-summary"
"Repository" = "https://github.com/1jamesthompson1/TAIC-report-summary"
"Bug Tracker" = "https://github.com/1jamesthompson1/TAIC-report-summary/issues"

[project.scripts]
engine = "engine.utils.cli:cli"
viewer = "viewer.app:run"

[tool.coverage.report]
include_namespace_packages = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "db_URI=./tests/data/vector_db",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "viewer*"]

[tool.deptry]
ignore = ["DEP004"]

[tool.ruff]
extend-exclude = ["*.ipynb"]